responsiveness on mobile fixed

--- a/components/portfolio.css
+++ b/components/portfolio.css
@@ -69,4 +69,8 @@
     font-size: 16px;
   }
 
+  .card {
+    margin-top: 20px;
+  }
+
 }
